# spark-exercises

./: README.md  pyproject.toml  rdd.ipynb  sql.ipynb  streaming-kafka.py  streaming.ipynb
kafka/: consumer.py  producer.py
sellers_example/: data_generator.py  excercises.ipynb
