[tool.poetry]
name = "pyspark_tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.0"
pandas = "^1.4.4"
tqdm = "^4.64.1"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
